[package]
name = "kepler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
async-std = "1.13.0"
aws-config = "1.5.10"
aws-sdk-kinesis = "1.52.0"
clap = "4.5.23"
env_logger = "0.11.5"
futures = "0.3.31"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }

[dev-dependencies]
mockito = "1.6.1"
rstest = "0.23.0"
serde = "1.0.216"
serde_json = "1.0.134"
rusoto_kinesis = "0.48"

[features]
callback = []
